--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GIT TUTORIAL</title>
 </head>
-<body>
-    <h1>GIT TUTORIAL</h1>
+<body style="background-color:red">
+    <h1 style="color:blue;text-align:center;">GIT TUTORIAL</h1>
 </body>
 </html>
