--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GIT TUTORIAL</title>
 </head>
-<body style="background-color:powder-blue">
+<body style="background-color:powderblue">
     <h1 style="color:red;text-align:center;">GIT TUTORIAL</h1>
 </body>
 </html>
